kubernetes/apps/main/network/envoy-gateway/envoy.yaml
---
# yaml-language-server: $schema=https://schemas.sstr.dev/gateway.networking.k8s.io/gatewayclass_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy
    namespace: network
---
# yaml-language-server: $schema=https://schemas.sstr.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external
  annotations:
    external-dns.kubernetes.io/target: &hostname ${EXTERNAL_DOMAIN}.${CERT_DOMAIN}
    gatus.home-operations.com/endpoint: |
      group: ${CLUSTER}-external
    #gatus.home-operations.com/endpoint: |
    #  client:
    #    dns-resolver: tcp://1.1.1.1:53
    #  group: ${CLUSTER}-external
spec:
  gatewayClassName: envoy
  infrastructure:
    labels:
      network.l2.cilium/segment: services
    annotations:
      external-dns.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: ${SVC_GATEWAY_EXTERNAL}
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: multi-domain-tls
---
# yaml-language-server: $schema=https://schemas.sstr.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-public
  annotations:
    external-dns.kubernetes.io/target: &hostname ${PUBLIC_DOMAIN}.${CERT_DOMAIN}
    gatus.home-operations.com/endpoint: |
      group: ${CLUSTER}-public
    #gatus.home-operations.com/endpoint: |
    #  client:
    #    dns-resolver: tcp://1.1.1.1:53
    #  group: public
spec:
  gatewayClassName: envoy
  infrastructure:
    labels:
      network.l2.cilium/segment: services
    annotations:
      external-dns.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: ${SVC_GATEWAY_PUBLIC}
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: public-domain-tls
---
# yaml-language-server: $schema=https://schemas.sstr.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  annotations:
    external-dns.kubernetes.io/target: &hostname ${INTERNAL_DOMAIN}.${CERT_DOMAIN}
    gatus.home-operations.com/endpoint: |
      group: ${CLUSTER}-internal
      guarded: true
      ui:
        hide-hostname: true
        hide-url: true
spec:
  gatewayClassName: envoy
  infrastructure:
    labels:
      network.l2.cilium/segment: servers
    annotations:
      external-dns.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: ${SVC_GATEWAY_INTERNAL}
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: cluster-internal-production-tls
